[flake8]
ignore=E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
exclude = 
    doc,
    __init__.py,
    **/*/version.py,
    tests/.tests
    conf.py
max-line-length = 110
max-doc-length = 79
[options]
setup_requires=setuptools_scm
[metadata]
version = attr: setuptools_scm.get_version

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N806 N812 N813 N815 N816 W503
